tests/ui/typeck/function_calls/mapping_not_callable.sol
//@ compile-flags: -Ztypeck
contract C {
    mapping (uint => uint) m;
    uint a = m(1000); //~ ERROR: expected function
}
